--- a/index.html
+++ b/index.html
@@ -1,154 +1,9 @@
-<!--
-
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Фон с линейным градиентом</title>
-    <style>
-        body {
-            /* Линейный градиент */
-            background: linear-gradient(90deg, #0cc0df, #ffde59);
-
-            /* Чтобы контент был читаемым на фоне, можно установить цвет текста */
-            color: #333; /* Например, черный цвет текста */
-        }
-
-        /* Дополнительные стили для контента страницы */
-        .content {
-            padding: 20px;
-            text-align: center;
-        }
-    </style>
-</head>
-<body>
-</body>
-</html>
-
--->
-
-
-
-
-
-<!--
-            оригинал
-            
-<!DOCTYPE html>
-<html lang-*en*>
-<head>
-    <meta charset="UTF-8">
-    <link rel-*stylesheet* href-*main.css*>
-    <link rel-"stylesheet" href-"https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-<body>
-    <ul>
-    <li style-"-1:#a955fr; -j:#ea51fr;">
-        <span class-"icon"><1 class-*fa fa-facebook"></1></span>
-        <span class-"titulo">facebook</span>
-    </li>
-    <li style-"-1:#56CCF2; -j:#2F90ED;">
-        <span class-"icon"><1 class-*fa fa-X"></1></span>
-        <span class-"titulo">X</span>
-    </li>
-    <li style-"-1:#86be6b; -j:#1baf16;">
-        <span class-"icon"><1 class-*fa fa-whatsapp"></1></span>
-        <span class-"titulo">whatsapp</span>
-    </li>
-    <li style-"-1:80FT72; -j:#5ec3d4;">
-        <span class-"icon"><1 class-*fa fa-lindedin"></1></span>
-        <span class-"titulo">lindedin</span>
-    </li>
-    <li style-"-1:FTA9C6; -j:#F434E2;">
-        <span class-"icon"><1 class-*fa fa-instagram"></1></span>
-        <span class-"titulo">instagram</span>
-    </li>
-    </ul>
-</body>
-</html>
--->
-
-
-<!-- Исправленная версия -->
-<!-- 
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        li {
-            margin: 10px 0;
-            display: flex;
-            align-items: center;
-        }
-
-        li span.icon {
-            margin-right: 10px;
-        }
-
-        li span.titulo {
-            font-weight: bold;
-        }
-    </style>
-</head>
-<body>
-    <ul>
-        <li style="background-color: #a955fr; color: #ea51fr;">
-            <span class="icon"><i class="fa fa-facebook"></i></span>
-            <span class="titulo">facebook</span>
-        </li>
-        <li style="background-color: #56CCF2; color: #2F90ED;">
-            <span class="icon"><i class="fa fa-X"></i></span>
-            <span class="titulo">X</span>
-        </li>
-        <li style="background-color: #86be6b; color: #1baf16;">
-            <span class="icon"><i class="fa fa-whatsapp"></i></span>
-            <span class="titulo">whatsapp</span>
-        </li>
-        <li style="background-color: #80FT72; color: #5ec3d4;">
-            <span class="icon"><i class="fa fa-lindedin"></i></span>
-            <span class="titulo">lindedin</span>
-        </li>
-        <li style="background-color: #FTA9C6; color: #F434E2;">
-            <span class="icon"><i class="fa fa-instagram"></i></span>
-            <span class="titulo">instagram</span>
-        </li>
-    </ul>
-</body>
-</html> -->
-
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-<title>Page Title</title>
-</head>
-
-
-    <meta charset="UTF-8">
-    <body style="background-color:powderblue;">
-
-
-    <h1 style="text-align:center;">About me</h1>
-    <p style="font-family:courier; text-align:center; color:blue;">Studing</p>
-
-
-</body>
-</html> -->
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<title>Page Title</title>
-<!-- <link rel="stylesheet" href="/home/evgen/Documents/my_website/styles.css"> -->
-<link href="file:///run/user/1000/doc/4aec0ef2/styles.css" rel="stylesheet" type="text/css">
+    <title>Ready to Roll</title>
+    <link rel="Website Icon" type="png" href="/home/evgen/Documents/my_website/images/K.E.png"> 
+    <link href="/home/evgen/Documents/my_website/styles.css" rel="stylesheet" type="text/css">
 
 </head>
 <body>
@@ -191,3 +46,6 @@
     </header>
 </body>
 </html>
+
+
+
